// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly with green option set 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.2rem;
  line-height: 3rem;
  height: 3rem;
  padding: 0 1rem;
  outline: 0;
  color: #eee;
  background: #046380;
  box-shadow: inset 0 -20px 10px -10px #045d78;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #8c9b7a;
  box-shadow: inset 0 -20px 10px -10px #849273;
}

.c0:hover {
  background: #045a74;
  box-shadow: inset 0 -20px 10px -10px #03546d;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
}

.c0:hover {
  background: #7f8d6f;
  box-shadow: inset 0 -20px 10px -10px #778468;
}

<button
  className="c0"
/>
`;

exports[`Button component renders correctly with no options 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.2rem;
  line-height: 3rem;
  height: 3rem;
  padding: 0 1rem;
  outline: 0;
  color: #eee;
  background: #046380;
  box-shadow: inset 0 -20px 10px -10px #045d78;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0:hover {
  background: #045a74;
  box-shadow: inset 0 -20px 10px -10px #03546d;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
}

<button
  className="c0"
/>
`;

exports[`Button component renders correctly with outline option set 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.2rem;
  line-height: 3rem;
  height: 3rem;
  padding: 0 1rem;
  outline: 0;
  color: #eee;
  background: #046380;
  box-shadow: inset 0 -20px 10px -10px #045d78;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: transparent;
  box-shadow: none;
  border: 1px solid black;
  color: black;
}

.c0:hover {
  background: #045a74;
  box-shadow: inset 0 -20px 10px -10px #03546d;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
}

.c0:hover {
  box-shadow: inset 0 -20px 10px -10px #d2d2d2;
  background: transparent;
}

<button
  className="c0"
/>
`;

exports[`Button component renders correctly with red option set 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.2rem;
  line-height: 3rem;
  height: 3rem;
  padding: 0 1rem;
  outline: 0;
  color: #eee;
  background: #046380;
  box-shadow: inset 0 -20px 10px -10px #045d78;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #bf3542;
  box-shadow: inset 0 -20px 10px -10px #b4323e;
}

.c0:hover {
  background: #045a74;
  box-shadow: inset 0 -20px 10px -10px #03546d;
  -webkit-transition: background,box-shadow;
  transition: background,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
  transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
}

.c0:hover {
  background: #ae303c;
  box-shadow: inset 0 -20px 10px -10px #a22d38;
}

<button
  className="c0"
/>
`;
